# tauri-editor

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  auto-imports.d.ts  package.json  pnpm-lock.yaml  requirements.txt  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/instructions/: build.instructions.md  test.instructions.md
.github/instructions/llm-context/: svelte.llm.md  tauri.llm.md
.github/instructions/testing/: svelte.md  tauri.md
.github/workflows/: release.yaml
src/: app.d.ts  app.pcss  global.css
src-backend/: server.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/all-MiniLM-L6-v2/: config.json
src-tauri/resources/csl/: citationSources.json  cslLocales.json  cslStyles.json  schema.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/db/: migrations.rs
src-tauri/src/ml/: mod.rs
src/lib/: Icon.svelte  index.ts
src/lib/editor/: Bibliography.ts  BubbleMenu.svelte  Citation.ts  Editor.svelte  Result.svelte  ResultCard.svelte  TabsPanel.svelte  ToolBar.svelte
src/lib/explorer/: Explorer.svelte  Explorer.test.ts  Tree.svelte  Tree.test.ts  TreeItem.svelte  TreeItem.test.ts
src/lib/icon/: Icon.svelte
src/lib/icons/: File-Plus.svelte  File-warning.svelte  Files.svelte  Pdf.svelte  (+4 more)
src/routes/: +layout.svelte  +page.svelte
src/types/: citation.ts  citeproc.d.ts  custom-events.d.ts  editor.d.ts  page.ts
src/utils/: api.ts  clickOutside.svelte.ts  db.ts  pdf_handlers.ts  tiptap-utils.ts  toasts.ts
(+57 files in other folders)
